Adds requirements metadata to app configs
Introduces explicit "requirements" fields to various application configuration files to clarify service dependencies and improve orchestration.
Removes legacy .orig files for better maintainability and reduces confusion.

--- a/multiflexi/pohoda-bank-transaction-report.app.json
+++ b/multiflexi/pohoda-bank-transaction-report.app.json
@@ -11,6 +11,7 @@
     "cs": "Generování podrobných transakčních výkazů z výpisů Raiffeisenbank pro Pohodu"
   },
   "tags": ["Raiffeisen", "Bank", "Transaction", "Report", "Pohoda"],
+  "requirements": ["mServer"],
   "homepage": "https://github.com/Spoje-NET/pohoda-raiffeisenbank",
   "executable": "pohoda-bank-transaction-report",
   "environment": {
