--- a/multiflexi/pohoda_raiffeisenbank_transactions.multiflexi.app.json
+++ b/multiflexi/pohoda_raiffeisenbank_transactions.multiflexi.app.json
@@ -190,16 +190,16 @@
             "required": true,
             "category": "API"
         },
-    "RBAPI_RATE_LIMIT_JSON_FILE": {
-      "type": "string",
-      "description": {
-        "en": "write API rate limit file using",
-        "cs": "Zápis souboru s limity přístupů API"
-      },
-      "defval": "{MULTIFLEXI_TMP}/rbczpremiumapi_rates.json",
-      "required": false,
-      "category": "API"
-    },
+        "RBAPI_RATE_LIMIT_JSON_FILE": {
+            "type": "string",
+            "description": {
+                "en": "write API rate limit file using",
+                "cs": "Zápis souboru s limity přístupů API"
+            },
+            "defval": "{MULTIFLEXI_TMP}/rbczpremiumapi_rates.json",
+            "required": false,
+            "category": "API"
+        },
         "EASE_LOGGER": {
             "type": "string",
             "description": {
@@ -209,6 +209,88 @@
             "defval": "console|syslog",
             "required": false,
             "category": "Behavior"
+        }
+    },
+    "exitCodes": {
+        "0": {
+            "description": {
+                "en": "Success",
+                "cs": "Úspěšné dokončení"
+            },
+            "severity": "success",
+            "retry": false
+        },
+        "1": {
+            "description": {
+                "en": "General error",
+                "cs": "Obecná chyba"
+            },
+            "severity": "error",
+            "retry": true
+        },
+        "145": {
+            "description": {
+                "en": "Bad request, validation error.",
+                "cs": "Chybný požadavek, validační chyba."
+            },
+            "severity": "error",
+            "retry": false
+        },
+        "146": {
+            "description": {
+                "en": "Certificate is invalid.",
+                "cs": "Certifikát je neplatný."
+            },
+            "severity": "error",
+            "retry": false
+        },
+        "148": {
+            "description": {
+                "en": "No access rights to perform the operation.",
+                "cs": "Uživatel nemá práva k provedení operace."
+            },
+            "severity": "error",
+            "retry": false
+        },
+        "149": {
+            "description": {
+                "en": "Requested resource does not exist.",
+                "cs": "Požadovaný zdroj neexistuje."
+            },
+            "severity": "error",
+            "retry": false
+        },
+        "158": {
+            "description": {
+                "en": "Request payload too large.",
+                "cs": "Tělo požadavku je příliš velké."
+            },
+            "severity": "error",
+            "retry": false
+        },
+        "160": {
+            "description": {
+                "en": "Unsupported media type.",
+                "cs": "Nepodporovaný typ obsahu."
+            },
+            "severity": "error",
+            "retry": false
+        },
+        "174": {
+            "description": {
+                "en": "Too many requests. Rate limit exceeded.",
+                "cs": "Příliš mnoho požadavků. Limit překročen."
+            },
+            "severity": "warning",
+            "retry": true
+        },
+        "245": {
+            "description": {
+                "en": "Unexpected internal error.",
+                "cs": "Neočekávaná interní chyba."
+            },
+            "severity": "critical",
+            "retry": false
         }
     }
 }
